--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  go:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -25,3 +25,20 @@ jobs:
 
       - name: Test
         run: go test -v ./...
+
+      - name: Generate coverage report
+        run: go test -coverprofile=coverage.out ./...
+
+      - name: Check coverage
+        id: coverage
+        run: |
+          coverage=$(go tool cover -func=coverage.out | grep total | awk '{print substr($3, 1, length($3)-1)}')
+          echo “total_coverage=$coverage” >> $GITHUB_OUPUT
+          echo “Coverage: $coverage%”
+
+      - name: Fail if coverage is below threshold
+        run: |
+          if (( $(echo “$total_coverage < 90" | bc -l) )); then
+            echo “Coverage ($total_coverage%) is below the threshold (50%)”
+            exit 1
+          fi
