--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,12 +33,12 @@ jobs:
         id: coverage
         run: |
           coverage=$(go tool cover -func=coverage.out | grep total | awk '{print substr($3, 1, length($3)-1)}')
-          echo “total_coverage=$coverage” >> "$GITHUB_OUTPUT"
-          echo “Coverage: $coverage%”
+          echo "total_coverage=$coverage" >> "$GITHUB_OUTPUT"
+          echo "Coverage: $coverage%"
 
       - name: Fail if coverage is below threshold
         run: |
-          if (( $(echo “$total_coverage < 90" | bc -l) )); then
-            echo “Coverage ($total_coverage%) is below the threshold (50%)”
+          if (( $(echo "$total_coverage < 90" | bc -l) )); then
+            echo "Coverage ($total_coverage%) is below the threshold (50%)"
             exit 1
           fi
