--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,6 +33,7 @@ jobs:
         id: coverage
         run: |
           coverage=$(go tool cover -func=coverage.out | grep total | awk '{print substr($3, 1, length($3)-1)}')
+          total_coverage=$coverage
           echo "total_coverage=$coverage" >> "$GITHUB_OUTPUT"
           echo "Coverage: $coverage%"
 
