--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,6 +32,7 @@ jobs:
           go test -coverprofile=coverage.out ./...
           awk '!/_test.go/' coverage.out > temp && mv temp coverage.out
           awk '!/_mock.go/' coverage.out > temp && mv temp coverage.out
+          awk '!/internal\/assert/' coverage.out > temp && mv temp coverage.out
           coverage=$(go tool cover -func=coverage.out | grep total | awk '{print substr($3, 1, length($3)-1)}')
           echo "total_coverage=$coverage" >> "$GITHUB_OUTPUT"
           if (( $(echo "$coverage < 90" | bc -l) )); then
