--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  go:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -25,3 +25,18 @@ jobs:
 
       - name: Test
         run: go test -v ./...
+
+      - name: Test coverage
+        id: coverage
+        run: |
+          go test -coverprofile=coverage.out ./...
+          awk '!/_test.go/' coverage.out > temp && mv temp coverage.out
+          awk '!/_mock.go/' coverage.out > temp && mv temp coverage.out
+          awk '!/internal\/assert/' coverage.out > temp && mv temp coverage.out
+          coverage=$(go tool cover -func=coverage.out | grep total | awk '{print substr($3, 1, length($3)-1)}')
+          echo "total_coverage=$coverage" >> "$GITHUB_OUTPUT"
+          if (( $(echo "$coverage < 80" | bc -l) )); then
+          echo "Coverage ($coverage%) is below the threshold (80%)"
+          exit 1
+          fi
+          echo "Coverage: $coverage%"
